# blazctf-2024

./: .gitignore  README.md  bundle.sh  start.sh  upload.sh
.github/workflows/: build-infra.yaml  build-revmc-anvil-builder.yaml  build-revmc-anvil.yaml  build-safusol.yaml  build-solalloc.yaml
bigen-layer/: README.md  challenge.yaml  deploy.sh
chisel-as-a-service/: README.md  build-web.sh  challenge.yaml
chisel-as-a-service/challenge/: challenge.py
cyber-cartel/: README.md  challenge.yaml
cyber-cartel/challenge/: challenge.py
doju/: .challengeignore  README.md  challenge.yaml
eight-inch/: README.md  Solution.t.sol  challenge.yaml  deploy.sh
eight-inch/challenge/: challenge.py
enterprise-blockchain/: Dockerfile  README.md  build.sh  k8s.yaml
enterprise-blockchain/bridge_contracts/: deploy.py  deploy.sh  foundry.toml
enterprise-blockchain/foundry/: Cargo.toml
i-love-revmc/: .challengeignore  README.md  challenge.yaml  exp-do-not-upload.py
oh-fuck-oym/: README.md  challenge.yaml
oh-fuck-pendle/: README.md  challenge.yaml
safusol/: .challengeignore  README.md  challenge.yaml
solalloc/: README.md  challenge.yaml
solalloc/challenge/server/: Cargo.toml
solalloc/challenge/server/program/src/solalloc/: solalloc.c
solalloc/challenge/server/src/: main.rs
teragas/: README.md
tony-lend/: README.md  challenge.yaml
tony-lend-2/: .challengeignore  README.md  challenge.yaml
tonyallet/: README.md  handout.py
tutori4l/: README.md  challenge.yaml
venn-gated-ronin-bridge/: .challengeignore  README.md  build-server.sh  challenge.yaml
(+207 files in other folders)
