[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-banks-interface = "1.18.23"
solana-program = "1.18.23"
solana-program-test = "1.18.23"
solana-sdk = "1.18.23"
spl-token = "4.0.0"
sol-ctf-framework = { git = "https://github.com/otter-sec/sol-ctf-framework", branch="rewrite-v2" }

threadpool = "1.8.1"
